# flutter_template

./: .gitignore  README.md  pubspec.yaml
.fvm/: flutter_sdk
assets/api_demo/: CMakeLists.txt  README.md  awi_aiaefs_api.h  awi_constant.h  main.cpp
assets/api_demo/libs/X86/: SLTBasic.lib
assets/api_demo/libs/X86/1/: SLTBasic.lib
assets/jsons/: templateInfo.json  templates.json  templates_en.json  translate.json
assets/lib/: hello.lib  main.cpp  slt_audio_api.h  tensorflowlite_c.dll.if.lib
assets/lib3/: hello.exp  slt_audio_api.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ___main.dart  main.dart  main1.dart
lib/UI/: BasicDialog.dart  DialogFactory.dart  banner_view.dart  bottom_input_bar.dart  common_image_view.dart  common_widgets.dart  custTabbar.dart  custom_appbar.dart  ease_button_widget.dart  pop_menu.dart  progress_dialog.dart  show_large_image.dart
lib/api/: api_url.dart  custom_interceptor.dart  network_request.dart  user_request.dart
lib/channel/: base_message_channel.dart
lib/config/: config.dart
lib/const/: color_const.dart  const.dart  font_const.dart  image_const.dart  json_const.dart  style_const.dart  svg_const.dart
lib/localization/: Translate.dart  app_localization.dart
lib/router/: app_route.dart
lib/service/: AlipayService.dart  PushService.dart  SoundService.dart  ThirdPartLoginAuthService.dart  UserService.dart  WxService.dart
lib/theme/: theme_config.dart
lib/utils/: CacheUtils.dart  (+13 more)
script/: assets.py  buildapk.sh  createFile.py  run.sh  translate_handle.py
test/: widget_test.dart
(+88 files in other folders)
